# space-lang

./: .gitignore  .gitpod.yml  Cargo.toml  LICENSE.md  README.md  deny.toml
.github/: FUNDING.yml
.github/workflows/: advisiores.yml  build.yml  clippy.yml
examples/: a.space  helloworld.space  module.space  syntax-old.space  syntax.space
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: main.rs  old.rs  syntax.pest
