[package]
name = "space-lang"
version = "0.1.0"
description = "yeah."
repository = "https://github.com/misilelab/sherry-lang"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }